alnadjah/shop-app:remove unused files

--- a/al-nadjah/alnadjah/package.json
+++ b/al-nadjah/alnadjah/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "shop-app",
-  "version": "0.0.0",
+  "name": "alnadjah-app",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 80",
